test/Fail/Issue2790-b.err
Issue2790-b.agda:1,1-42: error: [OptionError]
Option --safe cannot be combined with option combination
--cubical-compatible and --with-K
